--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
-    "busboy": "^1.6.0",
-    "ffmpeg-static": "^5.2.0",
-    "fluent-ffmpeg": "^2.1.3",
+    "mic-recorder-to-mp3": "^2.2.2",
     "next": "16.0.2",
     "react": "19.2.0",
     "react-dom": "19.2.0"
